fixed the empty state styling on smallframe [ci skip]

--- a/app/assets/stylesheets/new_styles/_canvas.scss
+++ b/app/assets/stylesheets/new_styles/_canvas.scss
@@ -271,6 +271,7 @@ color: white;
     }
   }
 
+  &.editable,
   &.big-text {
     .text-content {
       display : table;
@@ -287,6 +288,11 @@ color: white;
         text-align : center;
       }
     }
+  }
+
+  &.editable p {
+    min-width : 225px;
+    min-height : 225px;
   }
 
   &.x2.big-text .text-content {
